// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Class Generate Read Requests Method Generates Appropriate Output 1`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        10,
        2,
        32,
        2,
        36,
        1,
        5,
        0,
        12,
        0,
        42,
        0,
        72,
        0,
        102,
        0,
        132,
        0,
        76,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        49,
        0,
        1,
        0,
        76,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        50,
        0,
        1,
        0,
        76,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        51,
        0,
        1,
        0,
        76,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        52,
        0,
        1,
        0,
        76,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        53,
        0,
        1,
        0,
      ],
      "type": "Buffer",
    },
    "tag_ids": Array [
      "f933545900d94fa18e26bf9495c807a5",
      "6a094b0c9172a58a127de4f4e3d07b4d",
      "b76fbe023a62902b18acbd368c5dec70",
      "a7c5544db81347948c6c062509b7664d",
      "a44f360e207bf89c9f2a379caeb459a4",
    ],
  },
]
`;

exports[`Tag Class Generate Read Requests Method Generates Appropriate Output On Large Data 1`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        10,
        2,
        32,
        2,
        36,
        1,
        5,
        0,
        12,
        0,
        80,
        0,
        148,
        0,
        216,
        0,
        28,
        1,
        76,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        49,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        1,
        0,
        76,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        50,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        1,
        0,
        76,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        51,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        1,
        0,
        76,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        52,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        1,
        0,
        76,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        53,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        1,
        0,
      ],
      "type": "Buffer",
    },
    "tag_ids": Array [
      "c00907cdbbe21da8405cb9619cf3ae03",
      "21b6c868bb5d41ad7191d325eaaae487",
      "29a77620e08c83b78ac32e2d4da75375",
      "153cca324d6a853b129e62bed1c979fe",
      "c620cebc92b9f3957fe6866747acba5a",
    ],
  },
]
`;

exports[`Tag Class Generate Write Requests Method Generates Appropriate Output 1`] = `Array []`;

exports[`Tag Class Generate Write Requests Method Generates Appropriate Output 2`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        10,
        2,
        32,
        2,
        36,
        1,
        5,
        0,
        12,
        0,
        48,
        0,
        84,
        0,
        120,
        0,
        156,
        0,
        77,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        49,
        0,
        196,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        77,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        50,
        0,
        196,
        0,
        1,
        0,
        1,
        0,
        0,
        0,
        77,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        51,
        0,
        196,
        0,
        1,
        0,
        2,
        0,
        0,
        0,
        77,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        52,
        0,
        196,
        0,
        1,
        0,
        3,
        0,
        0,
        0,
        77,
        13,
        145,
        12,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        112,
        114,
        111,
        103,
        145,
        9,
        104,
        101,
        108,
        108,
        111,
        84,
        97,
        103,
        53,
        0,
        196,
        0,
        1,
        0,
        4,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "tag_ids": Array [
      "f933545900d94fa18e26bf9495c807a5",
      "6a094b0c9172a58a127de4f4e3d07b4d",
      "b76fbe023a62902b18acbd368c5dec70",
      "a7c5544db81347948c6c062509b7664d",
      "a44f360e207bf89c9f2a379caeb459a4",
    ],
  },
]
`;

exports[`Tag Class Generate Write Requests Method Generates Appropriate Output On Large Tag Data 1`] = `Array []`;

exports[`Tag Class Generate Write Requests Method Generates Appropriate Output On Large Tag Data 2`] = `
Array [
  Object {
    "data": Object {
      "data": Array [
        10,
        2,
        32,
        2,
        36,
        1,
        4,
        0,
        10,
        0,
        84,
        0,
        158,
        0,
        232,
        0,
        77,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        49,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        196,
        0,
        1,
        0,
        0,
        0,
        0,
        0,
        77,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        50,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        196,
        0,
        1,
        0,
        1,
        0,
        0,
        0,
        77,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        51,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        196,
        0,
        1,
        0,
        2,
        0,
        0,
        0,
        77,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        52,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        196,
        0,
        1,
        0,
        3,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "tag_ids": Array [
      "c00907cdbbe21da8405cb9619cf3ae03",
      "21b6c868bb5d41ad7191d325eaaae487",
      "29a77620e08c83b78ac32e2d4da75375",
      "153cca324d6a853b129e62bed1c979fe",
    ],
  },
  Object {
    "data": Object {
      "data": Array [
        10,
        2,
        32,
        2,
        36,
        1,
        1,
        0,
        4,
        0,
        77,
        32,
        145,
        20,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        58,
        80,
        114,
        111,
        103,
        114,
        97,
        109,
        95,
        78,
        97,
        109,
        101,
        145,
        9,
        84,
        97,
        103,
        95,
        78,
        97,
        109,
        101,
        53,
        0,
        145,
        11,
        77,
        101,
        109,
        98,
        101,
        114,
        95,
        78,
        97,
        109,
        101,
        0,
        145,
        14,
        65,
        110,
        111,
        116,
        104,
        101,
        114,
        95,
        77,
        101,
        109,
        98,
        101,
        114,
        196,
        0,
        1,
        0,
        4,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "tag_ids": Array [
      "c620cebc92b9f3957fe6866747acba5a",
    ],
  },
]
`;
